<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactsManagerA3</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="first_name_hint">First Name</string>
    <string name="home_phone_hint">Home Phone</string>
    <string name="last_name_hint">Last Name</string>
    <string name="mobile_phone_hint">Mobile Phone</string>
    <string name="done_button">Done</string>
    <string name="title_activity_view_contact">ViewContact</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="delete_contact">Delete</string>
    <string name="title_activity_main_activityasdf">MainActivityasdf</string>
    <string name="work_phone_hint">Work Phone</string>
    <string name="email_address_hint">Email Address</string>
    <string name="photo_desc">Photo for current contact</string>
    
    
    
    <string name="back_contact">Back</string><string name="edit_contact">Edit</string><string name="title_activity_edit_contact">EditContact</string><string name="view_contact_workphone">Work Phone</string><string name="view_contact_homephone">Home Phone</string><string name="view_contact_mobilephone">Mobile Phone</string>
    
    <string name="view_contact_addressline1">Address</string>
    
    <string name="view_contact_city">City</string>
    <string name="view_contact_country">Country</string>
    <string name="view_contact_dateofbirth">Date of Birth</string>
    <string name="view_contact_email">Email</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="country_hint">Country</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="sort_order">Sort Order</string>

</resources>
