<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddContact" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
		android:paddingLeft="3dp" >
        <ImageView
            android:id="@+id/add_contact_image_view"
            android:layout_width="83dp"
            android:layout_height="118dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:src="@drawable/dummyphoto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/first_name_hint"
                android:inputType="text" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/last_name_hint"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>
    
    <EditText
        android:id="@+id/mobile_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"	
        android:hint="@string/mobile_phone_hint"    
	    android:inputType="phone" />
    
    <EditText
        android:id="@+id/home_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/home_phone_hint"      
	    android:inputType="phone" />
    
    <EditText
        android:id="@+id/work_phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/work_phone_hint"    	    
	    android:inputType="phone" />
    
    <EditText
        android:id="@+id/email_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address_hint"    	    
	    android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/addressline1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_line_1_hint"    	    
	    android:inputType="text" />
    
    <EditText
        android:id="@+id/addressline2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_line_2_hint"    	    
	    android:inputType="text" />
    
    <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"	 
        android:hint="@string/city_hint"       
	    android:inputType="text" />
    
    <EditText
        android:id="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_hint"    	    
	    android:inputType="text" />
    
    <EditText
        android:id="@+id/dateofbirth"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"	   
        android:hint="@string/date_of_birth_hint"     
	    android:inputType="date" />
    
</LinearLayout>
