<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	
    <item
        android:id="@+id/back_contact_button"
        android:orderInCategory="1"
        android:showAsAction="always"        
        android:title="@string/back_contact" />
    <item
        android:id="@+id/edit_contact_button"
        android:orderInCategory="1"
        android:showAsAction="always"        
        android:title="@string/edit_contact" />
    <item
        android:id="@+id/delete_contact_button"
        android:orderInCategory="1"
        android:showAsAction="always"        
        android:title="@string/delete_contact" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
